[gd_scene load_steps=9 format=3 uid="uid://dk05btb5p48wl"]

[ext_resource type="Script" path="res://screens/market/piggy_market.gd" id="1_5gs6b"]
[ext_resource type="PackedScene" uid="uid://bhpnlwtvs15ws" path="res://components/background/background.tscn" id="2_sx3vk"]
[ext_resource type="PackedScene" uid="uid://dp2cu3b6eoq44" path="res://components/piggycoincount/piggy_coin_count.tscn" id="3_8a8st"]
[ext_resource type="AudioStream" uid="uid://d3rm3kc68xnxn" path="res://assets/sounds/cha_ching.mp3" id="4_18lm0"]
[ext_resource type="Theme" uid="uid://c7dkyme878fgs" path="res://components/button_theme.tres" id="5_pmefa"]
[ext_resource type="Texture2D" uid="uid://va5obl2npcac" path="res://assets/shop4x.png" id="6_4r0va"]

[sub_resource type="LabelSettings" id="LabelSettings_y2vqn"]
font_size = 62

[sub_resource type="Theme" id="Theme_4cw4q"]
default_font_size = 42

[node name="PiggyMarketContainer" type="CanvasLayer"]
script = ExtResource("1_5gs6b")

[node name="Background" parent="." instance=ExtResource("2_sx3vk")]

[node name="Label" type="Label" parent="."]
offset_left = 56.0
offset_top = 62.0
offset_right = 775.0
offset_bottom = 303.0
text = "This little piggy went to market..."
label_settings = SubResource("LabelSettings_y2vqn")
autowrap_mode = 3

[node name="PiggyCoinCount" parent="." instance=ExtResource("3_8a8st")]

[node name="Shop4x" type="Sprite2D" parent="PiggyCoinCount"]
position = Vector2(-8.39612, 377.683)
scale = Vector2(1.39935, 1.38854)
texture = ExtResource("6_4r0va")

[node name="PurchaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_18lm0")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 396.0
offset_bottom = -213.0
grow_horizontal = 2
grow_vertical = 2
scroll_deadzone = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -169.0
offset_right = 318.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_pmefa")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="PurchaseDialog" type="ConfirmationDialog" parent="."]
title = ""
position = Vector2i(0, 36)
size = Vector2i(850, 500)
exclusive = false
popup_window = true
force_native = true
content_scale_mode = 1
content_scale_aspect = 2
theme = SubResource("Theme_4cw4q")

[node name="Button" type="Button" parent="."]
offset_left = 24.0
offset_top = 259.0
offset_right = 303.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 35
text = "Unequip All"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="confirmed" from="PurchaseDialog" to="." method="_on_purchase_dialog_confirmed"]
[connection signal="pressed" from="Button" to="." method="_on_unequip_all_pressed"]
